; ModuleID = '/home/carl/AnghaBench/linux/kernel/trace/extr_trace_events_hist.c_save_field_var.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/trace/extr_trace_events_hist.c_save_field_var.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hist_trigger_data = type { i32, i32, %struct.field_var** }
%struct.field_var = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@HIST_FIELD_FL_STRING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hist_trigger_data*, %struct.field_var*)* @save_field_var to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @save_field_var(%struct.hist_trigger_data* %0, %struct.field_var* %1) #0 {
  %3 = alloca %struct.hist_trigger_data*, align 8
  %4 = alloca %struct.field_var*, align 8
  store %struct.hist_trigger_data* %0, %struct.hist_trigger_data** %3, align 8
  store %struct.field_var* %1, %struct.field_var** %4, align 8
  %5 = load %struct.field_var*, %struct.field_var** %4, align 8
  %6 = load %struct.hist_trigger_data*, %struct.hist_trigger_data** %3, align 8
  %7 = getelementptr inbounds %struct.hist_trigger_data, %struct.hist_trigger_data* %6, i32 0, i32 2
  %8 = load %struct.field_var**, %struct.field_var*** %7, align 8
  %9 = load %struct.hist_trigger_data*, %struct.hist_trigger_data** %3, align 8
  %10 = getelementptr inbounds %struct.hist_trigger_data, %struct.hist_trigger_data* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %10, align 4
  %13 = sext i32 %11 to i64
  %14 = getelementptr inbounds %struct.field_var*, %struct.field_var** %8, i64 %13
  store %struct.field_var* %5, %struct.field_var** %14, align 8
  %15 = load %struct.field_var*, %struct.field_var** %4, align 8
  %16 = getelementptr inbounds %struct.field_var, %struct.field_var* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @HIST_FIELD_FL_STRING, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %2
  %24 = load %struct.hist_trigger_data*, %struct.hist_trigger_data** %3, align 8
  %25 = getelementptr inbounds %struct.hist_trigger_data, %struct.hist_trigger_data* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %25, align 8
  br label %28

28:                                               ; preds = %23, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
